# coilpy

./: MANIFEST.in  meson.build  pyproject.toml  setup.py
.github/workflows/: build.yml  pypi.yml
coilpy/: __init__.py
