[build-system]
requires = [
    "meson",
    "meson-python", 
    "ninja", 
    "numpy>=2.0; python_version<'3.8'",
    "oldest-supported-numpy; python_version>='3.8'",
]
build-backend = "mesonpy"

[tool.cibuildwheel]
manylinux-i686-image = "manylinux2014"
manylinux-x86_64-image = "manylinux2014"

# [tool.setuptools_scm]
# write_to = "/coilpy/_version.py"


[project]
name = "coilpy"
version = "0.4.02"
description = "Plotting and data processing tools for plasma and coil"
readme = "README.md"
authors = [
    { name = "Caoxiang Zhu", email = "caoxiangzhu@gmail.com" },
]
maintainers = [
    { name = "Caoxiang Zhu", email = "caoxiangzhu@gmail.com" },
]
license = {text = "GNU 3.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "scipy",
    "xarray",
    "h5py",
    "matplotlib",
    "pandas",
    "plotly",
    "numpy",
    "pyevtk",
    "classes",
    "f90nml",
    "meshio",
]
